# Super-Trunfo-em-c

./: CMakeLists.txt  README.md
C/: Programa.c  soma de 3 num.c
C/Entrada e saída de dados/: pessoas.c
C/aula10/: media.c
C/aula10desafio/: media.c
C/aula11/: desafioaventureiro.c
C/aula12/: operadores.c
C/aula13/: estoque.c
C/aula13desafio/: estoque.c
C/aula14desafio/: compara.c
C/aula15/: condicaoif.c
C/aula16/: condicaoelse.c
C/aula5/: pessoas.c
C/aula6/: alunos.c
C/aula7desafio/: SuperTrunfo.c  supertrunfootm.c
C/aula8/: atribuicao.c  incrementoedescremento.c  operadoresmatematicos.c  pos.c  posincremento.c
C/aula9/: manipulaconver.c
