cmake_minimum_required(VERSION 4.2)
project(Super_Trunfo_em_c C)

set(CMAKE_C_STANDARD 11)

add_executable(Super_Trunfo_em_c
        C/aula4/Programa.c
        "C/aula4/soma de 3 num.c"
        C/aula5/pessoas.c
        C/aula5/print.c
        C/aula6/alunos.c
        C/aula7desafio/SuperTrunfo.c
        C/aula7desafio/supertrunfootm.c
        C/aula8/operadoresmatematicos.c)
